vlib/v/checker/tests/anon_fn_arg_type_err.out
vlib/v/checker/tests/anon_fn_arg_type_err.vv:6:14: error: use `_` to name an unused parameter
    4 |     mut i := 1
    5 | 
    6 |     func := fn (i) int {
      |                 ^
    7 |         return i
    8 |     }
vlib/v/checker/tests/anon_fn_arg_type_err.vv:7:10: error: `i` must be explicitly listed as inherited variable to be used inside a closure
    5 | 
    6 |     func := fn (i) int {
    7 |         return i
      |                ^
    8 |     }
    9 |
Details: use `fn [i] () {` instead of `fn () {`
vlib/v/checker/tests/anon_fn_arg_type_err.vv:7:3: error: `i` used as value
    5 | 
    6 |     func := fn (i) int {
    7 |         return i
      |         ~~~~~~~~
    8 |     }
    9 |
vlib/v/checker/tests/anon_fn_arg_type_err.vv:6:14: error: unknown type `i`
    4 |     mut i := 1
    5 | 
    6 |     func := fn (i) int {
      |                 ^
    7 |         return i
    8 |     }
vlib/v/checker/tests/anon_fn_arg_type_err.vv:10:15: error: cannot use `int` as `i` in argument 1 to `func`
    8 |     }
    9 | 
   10 |     println(func(i) == 1)
      |                  ^
   11 | }
