vlib/v/checker/tests/anon_fn_arg_type_err.vv
module main

fn main() {
	mut i := 1

	func := fn (i) int {
		return i
	}

	println(func(i) == 1)
}
